[tool.poetry]
name = "usvisa-fr"
version = "0.1.0"
description = "Simple template for python libs with poetry and mkdocs."
authors = ["Ouail Bendidi <ouail.bendidi@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/obendidi/usvisa-fr"
homepage = "https://github.com/obendidi/usvisa-fr"
keywords = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3 :: Only",
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.5.1"
beartype = "^0.10.4"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.961"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
python_version = 3.7
exclude = "tests/"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
# add your package name here
addopts = "-ra -q -vv --cov={{package-name}} --cov-report=term"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
omit = ["**/tests/test_*.py"]
fail_under = 50
