[tool.poetry]
name = "usvisa-fr"
version = "0.1.0"
description = ""
authors = ["Ouail Bendidi <ouail.bendidi@gmail.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.5.1"
pydantic = "^1.9.1"
python-dotenv = "^0.20.0"
python-dateutil = "^2.8.2"
beautifulsoup4 = "^4.11.1"
httpx = "^0.23.0"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.961"
types-python-dateutil = "^2.8.18"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
python_version = 3.7
exclude = "tests/"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
# add your package name here
addopts = "-ra -q -vv --cov=usvisa_fr --cov-report=term"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
omit = ["**/tests/test_*.py"]
fail_under = 50
